Spam on logs and eating of memory
Hello! I have cmda-usb-modem. For conecting i use networmanager-gnome, and i have this warnings: Aug 05 15:14:03 archlinux ModemManager[315]: checking if connected failed: Couldn't load connection status: cid not defined Aug 05 15:14:08 archlinux ModemManager[315]: checking if connected failed: Couldn't load connection status: cid not defined Aug 05 15:14:13 archlinux ModemManager[315]: checking if connected failed: Couldn't load connection status: cid not defined
Also, modemmanager can to eat 500Mb of RAM at a day of uptime.